# RealtimePySCF

./: INSTALL  README.md  TDSCF.prm  add_to_pyscf_lib_dft_nr_numint.c  test.in  test.py  test1.py  test2.py  test3.py  testC.py
jnb/: formic.in  formic.out  formic.py
lib/: CMakeLists.txt
lib/tdscf/: CMakeLists.txt  TCL.h  TCL_ActiveSpace.h  TCL_EE2.h  TCL_EE2.hfullb  TCL_Scratch.h  TCL_TDCI.h  TCL_complex_functions.h  TCL_polematrices.C  TCL_polematrices.h  TCL_prop.h  bo.h  field.h  func.h  tdscf.cpp  tdscf.h
misc/: spectra.nb
tdscf/: README  __init__.py  bo.py  bohf.py  embedded.py  func.py  tdcis.py  tdfields.py  tdscf.py  tdscfC.py
tdscf/tests/: bohf1.py  borks1.py  borks2.py  borks3.py  debug.py  testkk.py
testkk/: README  bohf0.py  bohf2.py  borks.py
